[package]
name = "byteseeker"
version = "0.1.1"
authors = ["mapkts <mapkts@gmail.com>"]
description = "Seeking byte slices within a stream of bytes"
edition = "2018"
documentation = "https://docs.rs/byteseeker/"
include = [
  "src/**/*",
  "tests/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = [
  "byte",
  "seek",
  "seeker",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mapkts/byteseeker/"
