[package]
name = "byteseeker"
version = "0.2.1"
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "Utility to seek byte slices within a fixed-sized byte stream"
edition = "2018"
documentation = "https://docs.rs/byteseeker/"
include = [
  "src/**/*",
  "tests/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = [
  "byte",
  "seek",
  "seeker",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mapkts/byteseeker/"
